advpack: Ignore lines that begin with '@' in (Un)RegisterOCXs sections.
Wine-Bug: https://bugs.winehq.org/show_bug.cgi?id=56209

--- a/dlls/advpack/tests/Makefile.in
+++ b/dlls/advpack/tests/Makefile.in
@@ -1,5 +1,5 @@
 TESTDLL   = advpack.dll
-IMPORTS   = cabinet advapi32 advpack
+IMPORTS   = cabinet advapi32 advpack user32
 
 SOURCES = \
 	advpack.c \
