--- a/dlls/ws2_32/tests/Makefile.in
+++ b/dlls/ws2_32/tests/Makefile.in
@@ -1,5 +1,5 @@
 TESTDLL   = ws2_32.dll
-IMPORTS   = iphlpapi ws2_32 user32
+IMPORTS   = iphlpapi ws2_32 user32 bluetoothapis
 
 SOURCES = \
 	afd.c \
