ws2_32: Implement WSALookupServiceBegin for Bluetooth device discovery.

--- a/dlls/ws2_32/Makefile.in
+++ b/dlls/ws2_32/Makefile.in
@@ -2,7 +2,7 @@ EXTRADEFS = -D_WS2_32_
 MODULE    = ws2_32.dll
 UNIXLIB   = ws2_32.so
 IMPORTLIB = ws2_32
-DELAYIMPORTS = dnsapi advapi32 iphlpapi user32
+DELAYIMPORTS = dnsapi advapi32 iphlpapi user32 bluetoothapis
 UNIX_LIBS    = $(PTHREAD_LIBS)
 
 SOURCES = \
