kernel32: Fix ASan reports in IsBad*

--- a/dlls/kernel32/Makefile.in
+++ b/dlls/kernel32/Makefile.in
@@ -1,4 +1,8 @@
-EXTRADEFS = -D_KERNEL32_ -D_NORMALIZE_
+EXTRADEFS = \
+	-D_KERNEL32_ \
+	-D_NORMALIZE_ \
+	-DWINE_ASAN=$(SANITIZE) \
+	-DASAN_SHADOW_OFFSET=$(ASAN_SHADOW_OFFSET)
 MODULE    = kernel32.dll
 IMPORTLIB = kernel32
 IMPORTS   = kernelbase ntdll
