--- a/dlls/winemac.drv/Makefile.in
+++ b/dlls/winemac.drv/Makefile.in
@@ -4,12 +4,14 @@ IMPORTS   = uuid rpcrt4 user32 gdi32 win32u
 DELAYIMPORTS = ole32 shell32 imm32
 UNIX_LIBS    = \
 	-lwin32u \
+	-framework Accelerate \
 	-framework AppKit \
 	-framework Carbon \
 	-framework CoreVideo \
 	-framework Foundation \
 	-framework IOKit \
 	-framework Metal \
+	-framework IOSurface \
 	-framework OpenGL \
 	-framework QuartzCore \
 	-framework Security \
