kernel32: Check for poison in LocalLock if ASan is enabled.
LocalLock check the validity of handle by accessing it and handle ACCESS_VIOLATION exceptions. When
ASan is enabled this will be caught and cause the program to abort. Check for ASan poison first to
avoid that.

--- a/dlls/kernelbase/Makefile.in
+++ b/dlls/kernelbase/Makefile.in
@@ -1,4 +1,10 @@
-EXTRADEFS = -DWINBASEAPI= -DWINADVAPI= -DWINUSERAPI= -DWINSHLWAPI=
+EXTRADEFS = \
+	-DWINBASEAPI= \
+	-DWINADVAPI= \
+	-DWINUSERAPI= \
+	-DWINSHLWAPI= \
+	-DWINE_ASAN=$(SANITIZE) \
+	-DASAN_SHADOW_OFFSET=$(ASAN_SHADOW_OFFSET)
 MODULE    = kernelbase.dll
 IMPORTLIB = kernelbase
 IMPORTS   = uuid ntdll
