include: Add Windows.UI.Input.RadialController definitions.

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -663,6 +663,8 @@ SOURCES = \
 	pstore.idl \
 	qedit.idl \
 	qos2.h \
+	radialcontrollerinterop.idl \
+	radialcontrollerconfigurationinterop.idl \
 	ras.h \
 	rasdlg.h \
 	raserror.h \
