windows.ui: Add stubs for RadialController classes.

--- a/dlls/windows.ui/Makefile.in
+++ b/dlls/windows.ui/Makefile.in
@@ -5,6 +5,9 @@ SOURCES = \
 	classes.idl \
 	inputpane.c \
 	main.c \
+	radialcontroller.c \
+	radialcontrollerconfiguration.c \
+	radialcontrollermenuitem.c \
 	uisettings.c \
 	uiviewsettings.c \
 	weakref.c
