--- a/tools/gitlab/test.yml
+++ b/tools/gitlab/test.yml
@@ -26,6 +26,7 @@
     - export LC_ALL=C.UTF-8
     - export LP_NUM_THREADS=4
     - export WINEDEBUG=err-all,fixme-all
+    - export WINEPREFIX=$BASEDIR/.wine
     - |
       cat >$HOME/xorg.conf << EOF
       Section "Device"
