--- a/tools/gitlab/test.yml
+++ b/tools/gitlab/test.yml
@@ -43,7 +43,8 @@
     - ln -sf $BASEDIR/wine-gecko-$GECKO_VER-x86.msi $BASEDIR/wine-gecko-$GECKO_VER-x86_64.msi usr/local/share/wine/gecko
     - ln -sf $BASEDIR/wine-mono-$MONO_VER-x86.msi usr/local/share/wine/mono
     - pulseaudio --start --exit-idle-time=-1
-    - wine wineboot.exe -u
+    - rm -rf ~/.wine
+    - wine wineboot.exe
     - wineserver -w
     - printf '\e[0Ksection_end:%s:wine_test_prepare_env\r\e[0K' "$(date +%s)"
 
