mfmediaengine/tests: Test output to format R10G10B10A2 from H.264.
Windows supports this. Media engine apparently performs a format
conversion, because the session engine topology loader cannot resolve
output to R10G10B10A2.

--- a/dlls/mfmediaengine/tests/resource.rc
+++ b/dlls/mfmediaengine/tests/resource.rc
@@ -28,6 +28,12 @@
 /* @makedep: i420-64x64.avi */
 i420-64x64.avi RCDATA i420-64x64.avi
 
+/* Generated with:
+ * ffmpeg -i i420-64x64.avi -c:v libx264 -preset slow -crf 17 i420-64x64.mp4
+ */
+/* @makedep: i420-64x64.mp4 */
+i420-64x64.mp4 RCDATA i420-64x64.mp4
+
 /* Generated from running the tests on Windows */
 /* @makedep: rgb32frame.bmp */
 rgb32frame.bmp RCDATA rgb32frame.bmp
